objects/Weather_Histories__c.object
<CustomObject>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Weather Histories</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Weather Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weather Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>